--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>sara granados | designer</title>
-<link href="index.css" rel="stylesheet" type="text/css">
+<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/index.css">
     <script src="slidercode.js" type="text/javascript"></script>
 <link href="sliderstyle.css" rel="stylesheet" type="text/css">
 <script type="text/javascript">
